2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ProgramTask.cs:
	* ZincOxide.csproj: 

2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj:
	* ProgramResult.cs:
	* EnumerableUtils.cs:
	* EvaluationResult.cs:
	* GeneratorVerbosity.cs:
	* ReadWriteableUtils.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* jobshop.mzn:
	* MiniZinc.lex:
	* MiniZinc.bison:
	* Interaction.cs:
	* jobshop2x2.data:
	* ZincOxide.csproj:
	* MiniZincParser.cs:
	* CompilerVerbosity.cs:
	* GeneratorVerbosity.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ReadWriteableUtils.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj:
	* ReadWriteableUtils.cs:
	* ContextStreamWriter.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* NameBase.cs:
	* ZincOxide.csproj:
	* ZincException.cs:
	* ZincOxideException.cs:
	* ContextStreamWriter.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IName.cs:
	* NameBase.cs:
	* NameRegister.cs:
	* ZincOxide.csproj:
	* INameRegister.cs:
	* IReadWriteable.cs:
	* GenerateNameRegister.cs:
	* IGenerateNameRegister.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* SetLiteral.cs:
	* ZincOxide.csproj:
	* EvaluationResult.cs:
	* CompilerVerbosity.cs:
	* ReadWriteableUtils.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincOxide.csproj: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IScope.cs:
	* IReadable.cs:
	* IWriteable.cs:
	* ZincOxide.csproj:
	* IValidateable.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IScope.cs:
	* IValidateable.cs: 

2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
