@@ -4,6 +4,10 @@
 
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincOxide.csproj: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* ProgramTask.cs:
 	* ZincOxide.csproj: 
 
